5_Cloud&DevOps/workspace/k8s-ddive/05.ingress/http/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk000-ingress-test
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk000-ingress-test
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 9b09375cdd2d7cfd70198e855f5e6278
      labels:
        app: sk000-ingress-test
    spec:
      serviceAccountName: default
      containers:
      - name: webserver
        image: amdp-registry.skala-ai.com/skala25a/sk000-webserver:2.0.0
        imagePullPolicy: Always
