5_Cloud&DevOps/workspace/k8s-ddive/05.ingress/http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk000-ingress-test
  namespace: skala-practice
spec:
  selector:
    app: sk000-ingress-test
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
