5_Cloud&DevOps/workspace/k8s-ddive/05.ingress/http/ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk099-ingress
  namespace: skala-practice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk000-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk000-ingress-test
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: sk000-ingress-test
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk000-ingress-test
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: sk000-ingress-test
            port:
              number: 8080
        path: /sk000(/|$)(.*)
        pathType: ImplementationSpecific
